Lots of fixes from the backlog.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -156,6 +156,8 @@ advancedView.name=Advanced
 encryptionView.name=PGP Encryption
 keysView.name=PGP Keys
 
+scheme.name=Mount Type
+
 encrypt.name=Encrypt Files
 encrypt.desc=Automatically PGP encrypt files as they are written to this folder, and automatically decrypt when being accessed.
 
