Basic mount report.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -195,3 +195,5 @@ folders.desc=You have access to the following folders.
 
 dataTransfer.name=30-Day Combined Transfers
 dataTransfer2.name=30-Day Transfer by Protocol
+
+collectingReport.text=Collecting data for the report.
