Added multiple delete and multiple shares for current view.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/sharedFiles.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/sharedFiles.properties
@@ -4,10 +4,13 @@ sharedFiles.name=Shared File
 virtualPath.name=Virtual Path
 virtualPath.desc=The path to the file or folder in the virtual file system.
 
+virtualPaths.name=Virtual Paths
+virtualPaths.desc=The paths of the files you are sharing on this resource. 
+
 shortCode.name=Short Code
 shortCode.desc=A unique identifier to anonymously identify this file or folder in public links.
 
-download.instructions=Click on the download button to initiate your download. All access to this file is logged including date, time and your IP address.
+download.instructions=Click on the download button to initiate your download. All access to this file is logged including date, time and your IP address {0}.
 
 notfound.text=File Not Found!
 notfound.instructions=The file you requested could not be found. This could either be because the file does not exist any more, that you don't have permission \
