--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -197,3 +197,7 @@ dataTransfer.name=30-Day Combined Transfers
 dataTransfer2.name=30-Day Transfer by Protocol
 
 collectingReport.text=Collecting data for the report.
+
+multipleFiles.text=This share contains multiple files which will download as a ZIP file.
+
+sharedContents.text=You can download individual files by selecting any of the links below.
