Shared files are accessible by all users.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/sharedFiles.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/sharedFiles.properties
@@ -1,6 +1,9 @@
 sharedFiles.names=Shared Files
 sharedFiles.name=Shared File
 
+name.name=Name
+name.desc=A name for this set of shared files.
+
 virtualPath.name=Virtual Path
 virtualPath.desc=The path to the file or folder in the virtual file system.
 
