Improvements in file sharing which is now a personal object so you don't need permission other than being assigned a virtual folder with permission to share. Check file paths for existence and share permissions.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -90,7 +90,9 @@ email.desc=The user's email address
 incomingFiles.names=Incoming Files
 incomingFiles.name=Incoming File
 
-publicUpload.name=Incoming Files
+incomingFiles.name=Incoming Files
+publicUpload.name=Upload Forms
+
 publicUpload.complete=The public folder has been created and is now live at the following url:
 
 user.name=Your Name
@@ -134,7 +136,7 @@ uploadArea.desc=The name of the upload folder where the files were uploaded.
 
 upload.name=Upload
 
-latestFiles.text=Latest Uploads
+latestFiles.text=Latest Files
 no.incomingFiles=You have not received any files recently.
 
 files.name=Files
@@ -201,3 +203,7 @@ collectingReport.text=Collecting data for the report.
 multipleFiles.text=This share contains multiple files which will download as a ZIP file.
 
 sharedContents.text=You can download individual files by selecting any of the links below.
+
+sharedFiles.name=My Shared Files
+mySharedFiles.text=The files you have shared are:
+no.sharedFiles=You have not shared any files.
