Add s3.name Ensure mount path starts with slash.

--- a/jadaptive-virtual-sftp-s3/src/main/resources/i18n/s3Folder.properties
+++ b/jadaptive-virtual-sftp-s3/src/main/resources/i18n/s3Folder.properties
@@ -1,6 +1,8 @@
 s3Folder.name=S3 Bucket
 s3Folder.names=S3 Buckets
 
+s3.name=Amazon S3
+
 name.name=Name
 name.desc=The name to identify this mount when using this system.
 
