Improvements to wizards.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/chooseFilesystem.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/chooseFilesystem.properties
@@ -1,4 +1,4 @@
-chooseFilesystem.setup.name=Home Folders
+chooseFilesystem.stepName=Home Folders
 chooseFilesystem.summary=There are several different ways that I can set up the file system. Choose an option from below that matches your requirements.
 
 choice1.header=Home Folders
