--- a/jadaptive-virtual-sftp/src/main/resources/i18n/publicUploadWizard.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/publicUploadWizard.properties
@@ -6,7 +6,7 @@ setup.getStarted=Get Started
 finish.name=Review Information
 
 wizard.name=Public Upload Wizard
-publicUploadStep1.setup.name=Set Name
+publicUploadStep1.stepName=Set Name
 selectName.desc=Provide a unique name for this public upload area.
 
 name.name=Name
@@ -17,7 +17,7 @@ virtualPath.name=Mount Path
 virtualPath.desc=All virtual folders are mounted somewhere within the virtual file system. If you are unsure about this leave the default value /public so that the upload folder is mounted at /public/&lt;name&gt;.
 virtualPath.invalid=The virtual path can only contain alpha-numeric, underscore, hyphen and forward slash characters.
 
-publicUploadStep2.setup.name=Create Mount
+publicUploadStep2.stepName=Create Mount
 
 selectMount.summary=Set the location of the public upload folder. All files received by this public upload URL will be placed in the folder configured here.
 
@@ -27,9 +27,9 @@ review.homeMount.desc=A mount will be created to host the public uploads for thi
 review.name.header=Name
 review.name.desc=The name to identify this public upload area. For internal access via the virtual file system a mount will be created with this name under the standard /public path.
 
-publicUploadStep3.setup.name=Assign Users
+publicUploadStep3.stepName=Assign Users
 
-homeCredentials.setup.name=Credentials
+homeCredentials.stepName=Credentials
 
 selectAssignments.desc=Select the users you want to have access to these files.
 roles.name=Roles
@@ -41,7 +41,7 @@ users.desc=The users you add here will have access to this folder.
 review.assignment.header=User Assignments
 review.assignment.desc=The Users and Roles listed here will have access to this folder.
 
-publicUploadStep4.setup.name=Additional Options
+publicUploadStep4.stepName=Additional Options
 options.desc=Configure the options of the upload form.
 
 shortCode.name=Shortcode
