--- a/jadaptive-virtual-sftp/src/main/resources/i18n/createMount.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/createMount.properties
@@ -1,5 +1,5 @@
 createMount.summary=Select the type of file system where you want to host the default home folder for users.
-createMount.setup.name=Home Folder
+createMount.stepName=Home Folder
 
 review.homeMount.header=Default Home
 review.homeMount.desc=The default home folder for all users will be configured as:
@@ -8,4 +8,4 @@ path.name=Path
 cacheStrategy.name=Cache Strategy
 
 homeCredentials.summary=Mount Credentials
-homeCredentials.setup.name=Set Credentials
+homeCredentials.stepName=Set Credentials
