Added help to shared files, incoming files and upload forms.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/sharedFiles.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/sharedFiles.properties
@@ -65,3 +65,15 @@ otherEmails.desc=Always notify these additional email addresses when sharing eve
 notfound.text=File Not Found
 notfound.instructions=The file that was shared with you is no longer available. Contact the user that shared the \
 file with you to get a new link to the file.
+
+help.text=This page is your view of the files you have shared from the <a href="/app/ui/tree">Browse Files</a> page.</p>\
+\
+<p>If you have Administrative permissions, you will also be able to see all the shares your users have created.</p>\
+\
+<p><i class="fa-regular fa-edit"></i> allows you to edit the share, update the short-code, remove or add files or change notification settings, password protection or terms &amp; conditions options.</p>\
+\
+<p><i class="fa-regular fa-eye"></i> is the read-only view of the share.</p>\
+\
+<p><i class="fa-regular fa-link"></i> is the link to the share that you should distribute to people you want to access the file(s).</p>\
+\
+<p><i class="fa-regular fa-trash"></i> deletes the share and prevents any further access to the files.</p>
