--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -144,7 +144,7 @@ virtualPath.name=Path
 virtualPaht.desc=The path to this file in the virtual file system.
 
 uploadComplete.title=Upload Complete
-uploadComplete.header=Upload Comlete
+uploadComplete.header=Upload Complete
 uploadComplete.text=Thank You
 uploadComplete.msg=We have received your files. We will contact you through our usual channels if we need to follow up with this submission.
 
@@ -207,3 +207,9 @@ sharedContents.text=You can download individual files by selecting any of the li
 sharedFiles.name=My Shared Files
 mySharedFiles.text=The files you have shared are:
 no.sharedFiles=You have not shared any files.
+
+copyURL.name=Copy Share Link
+copyURL.desc=The link to this page. Use this link to share with other users.
+
+copyDirect.name=Copy Direct Link
+copyDirect.desc=A direct link to the file for use in scripts and other automated processes.
