--- a/jadaptive-virtual-sftp/src/main/resources/i18n/uploadForm.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/uploadForm.properties
@@ -1,14 +1,15 @@
-setup.title=Public Upload Wizard
+setup.title=Upload Form Wizard
 setup.info=This wizard will help you create a public URL that you can share to external clients \
 and users so they can upload files into your virtual file system.
 setup.getStarted=Get Started
 
 finish.name=Review Information
 
-wizard.name=Public Upload Wizard
+wizard.name=Upload Form Wizard
 publicUploadStep1.stepName=Set Name
 selectName.desc=Provide a unique name for this public upload area.
 
+createUpload.name=Create
 name.name=Name
 name.desc=Provide a name for the upload area avoiding words such as "public". Perhaps use a customer or partners name if the area is specific to a particular entity.
 name.invalid=The name field can only contain alpha-numeric, underscore, hyphen and the space character and is limited to a length of 64 characters in total.
