Lots of work on events and event log.

--- a/jadaptive-virtual-sftp-azure/src/main/resources/i18n/azureFolder.properties
+++ b/jadaptive-virtual-sftp-azure/src/main/resources/i18n/azureFolder.properties
@@ -1,6 +1,11 @@
 azureFolder.name=Azure Container
 azureFolder.names=Azure Containers
 
+azureFolder=Azure Container
+azureFolder.created=Azure Container Created
+azureFolder.updated=Azure Container Updated
+azureFolder.deleted=Azure Container Deleted
+
 filePath.name=Container Path
 filePath.desc=The container name and optional path within the Azure Container.
 
