--- a/jadaptive-virtual-sftp-dropbox/src/main/resources/i18n/dropboxFolder.properties
+++ b/jadaptive-virtual-sftp-dropbox/src/main/resources/i18n/dropboxFolder.properties
@@ -1,2 +1,7 @@
 dropboxFolder.name=Dropbox Folder
 dropboxFolder.names=Dropbox Folders
+
+dropboxFolder=DropBox Folder
+dropboxFolder.created=DropBox Folder Created
+dropboxFolder.updated=DropBox Folder Updated
+dropboxFolder.deleted=DropBox Folder Deleted
