--- a/jadaptive-virtual-sftp-s3/src/main/resources/i18n/s3Folder.properties
+++ b/jadaptive-virtual-sftp-s3/src/main/resources/i18n/s3Folder.properties
@@ -3,6 +3,11 @@ s3Folder.names=S3 Buckets
 
 s3.name=Amazon S3
 
+s3Folder=S3 Folder
+s3Folder.created=S3 Folder Created
+s3Folder.updated=S3 Folder Updated
+s3Folder.deleted=S3 Folder Deleted
+
 name.name=Name
 name.desc=The name to identify this mount when using this system.
 
