--- a/jadaptive-virtual-sftp-sftp/src/main/resources/i18n/sftpFolder.properties
+++ b/jadaptive-virtual-sftp-sftp/src/main/resources/i18n/sftpFolder.properties
@@ -1,5 +1,10 @@
 sftp.name=SFTP
 
+sftpFolder=SFTP Folder
+sftpFolder.created=SFTP Folder Created
+sftpFolder.updated=SFTP Folder Updated
+sftpFolder.deleted=SFTP Folder Deleted
+
 privateKeyCredentials.name=Private Key
 privateKeyCredentials.desc=
 
