--- a/jadaptive-virtual-sftp-windows/src/main/resources/i18n/windowsFolder.properties
+++ b/jadaptive-virtual-sftp-windows/src/main/resources/i18n/windowsFolder.properties
@@ -1,6 +1,11 @@
 windowsFolder.name=Windows Share
 windowsFolder.names=Windows Shares
 
+windowsFolder=Windows Folder
+windowsFolder.created=Windows Folder Created
+windowsFolder.updated=Windows Folder Updated
+windowsFolder.deleted=Windows Folder Deleted
+
 domain.name=Domain
 domain.desc=The domain of the user.
 
