--- a/jadaptive-virtual-sftp/src/main/resources/i18n/incomingFiles.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/incomingFiles.properties
@@ -1,6 +1,27 @@
 incomingFiles.names=Incoming Files
 incomingFile.name=Incoming File
 
+incomingFiles=Incoming Files
+
+incomingFiles.created=Files Created
+incomingFiles.updated=Files Updated
+incomingFiles.deleted=Files Deleted
+
+files.name=Files
+info.name=Information
+
+name.name=Uploader
+name.desc=The name of the user that uploaded these files.
+
+email.name=Email
+email.desc=The user's email address.
+
+reference.name=Reference
+reference.desc=If you have a reference for this upload provide it here.
+
+uploadArea.name=Folder
+uploadArea.desc=The name of the upload folder where the files were uploaded.
+
 help.text=Here you will find the files that users have uploaded through your <a href="/app/ui/search/uploadForms">Upload Forms</a>. \
 You will see the Incoming Files entries for any form to which you are assigned.</p>\
 \
