--- a/jadaptive-virtual-sftp/src/main/resources/i18n/sharedFiles.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/sharedFiles.properties
@@ -1,5 +1,10 @@
 sharedFiles.names=Shared Files
 sharedFiles.name=Shared File
+sharedFiles=File Sharing
+
+sharedFiles.created=File Share Created
+sharedFiles.updated=File Share Updated
+sharedFiles.deleted=File Share Deleted
 
 name.name=Name
 name.desc=A name for this set of shared files.
