--- a/jadaptive-virtual-sftp/src/main/resources/i18n/uploadForms.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/uploadForms.properties
@@ -1,6 +1,12 @@
 uploadForms.names=Upload Forms
 uploadForms.name=Upload Form
 
+uploadForms=Upload Forms
+
+uploadForms.created=Upload Form Created
+uploadForms.updated=Upload Form Updated
+uploadForms.deleted=Upload Form Deleted
+
 file.name=File
 notifications.name=Notifications
 
