--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -2,9 +2,16 @@
 #Wed Jul 01 19:17:45 BST 2020
 virtualFolder.name=Virtual Folder
 virtualFolder.names=Virtual Folders
+virtualFolder=Virtual Folders
+
+virtualFolder.created=Virtual Folder Created
+virtualFolder.updated=Virtual Folder Updated
+virtualFolder.deleted=Virtual Folder Deleted
 
 uploadFiles.names=Upload Files
 uploadFiles.name=Upload File
+
+sharingView.name=Sharing
 
 files=File System
 
@@ -84,8 +91,7 @@ create.public.upload=a public URL to receive files over the web
 configureFiles.name=Configure File System
 browseFiles.name=Browse Files
 
-email.name=Email
-email.desc=The user's email address
+
 
 incomingFiles.names=Incoming Files
 incomingFiles.name=Incoming File
@@ -127,12 +133,6 @@ size.desc=The number of bytes transfered.
 
 uploadPaths.name=Files
 uploadPaths.desc=The files uploaded.
-
-reference.name=Reference
-reference.desc=If you have a reference for this upload provide it here.
-
-uploadArea.name=Folder
-uploadArea.desc=The name of the upload folder where the files were uploaded.
 
 upload.name=Upload
 
