Removed finish from public upload wizard and i18n fixes.

--- a/jadaptive-virtual-sftp-local/src/main/resources/i18n/localFolder.properties
+++ b/jadaptive-virtual-sftp-local/src/main/resources/i18n/localFolder.properties
@@ -1,6 +1,6 @@
 localFolder.name=Local Folder
 localFolder.names=Local Folders
-
+local.name=Local
 localFolder=Local Folder
 localFolder.created=Local Folder Created
 localFolder.updated=Local Folder Updated
