--- a/jadaptive-virtual-sftp-windows/src/main/resources/i18n/windowsFolder.properties
+++ b/jadaptive-virtual-sftp-windows/src/main/resources/i18n/windowsFolder.properties
@@ -1,5 +1,6 @@
 windowsFolder.name=Windows Share
 windowsFolder.names=Windows Shares
+windows.name=Windows
 
 windowsFolder=Windows Folder
 windowsFolder.created=Windows Folder Created
