--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -198,6 +198,9 @@ folders.desc=You have access to the following folders.
 dataTransfer.name=30-Day Combined Transfers
 dataTransfer2.name=30-Day Transfer by Protocol
 
+reference.name=Reference
+reference.desc=Your reference for this upload.
+
 collectingReport.text=Collecting data for the report.
 
 multipleFiles.text=This share contains multiple files which will download as a ZIP file.
