--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -216,3 +216,5 @@ copyURL.desc=The link to this page. Use this link to share with other users.
 
 copyDirect.name=Copy Direct Link
 copyDirect.desc=A direct link to the file for use in scripts and other automated processes.
+
+behavioursView.name=Extensions
