Rebrand VSFTP as Secure File Exchange.

--- a/jadaptive-virtual-sftp-product/src/main/resources/i18n/vendor.properties
+++ b/jadaptive-virtual-sftp-product/src/main/resources/i18n/vendor.properties
@@ -1,4 +1,4 @@
 # It is intended that this file is generated during build time
-product.name=Virtual SFTP 
+product.name=Secure File Exchange 
 
-product.setup.complete=Your Virtual SFTP server is now setup and ready to serve files! 
+product.setup.complete=Your Secure File Exchange server is now setup and ready to serve files! 
