Initial support for object extensions.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/folderNotes.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/folderNotes.properties
@@ -1,2 +1,9 @@
 folderNotes.names=Folder Notes
 folderNotes.name=Notes
+
+notesView.name=Notes
+
+notes.name=Notes
+notes.desc=Add notes related to this folder here.
+
+folderNotes.remove=Remove Notes
