--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -8,6 +8,8 @@ virtualFolder.created=Virtual Folder Created
 virtualFolder.updated=Virtual Folder Updated
 virtualFolder.deleted=Virtual Folder Deleted
 
+extendWith.name=Add Folder Extension
+
 uploadFiles.names=Upload Files
 uploadFiles.name=Upload File
 
@@ -205,6 +207,9 @@ collectingReport.text=Collecting data for the report.
 
 multipleFiles.text=This share contains multiple files which will download as a ZIP file.
 
+sharing.name=Sharing
+pGPEncryption.name=PGP Encryption
+
 sharedContents.text=You can download individual files by selecting any of the links below.
 
 sharedFiles.name=My Shared Files
@@ -216,3 +221,6 @@ copyURL.desc=The link to this page. Use this link to share with other users.
 
 copyDirect.name=Copy Direct Link
 copyDirect.desc=A direct link to the file for use in scripts and other automated processes.
+
+pGPEncryption.remove=Remove PGP Encryption
+sharing.remove=Remove Sharing
