Convert s3 provider to new synergy based s3

--- a/jadaptive-virtual-sftp-s3/src/main/resources/i18n/s3Folder.properties
+++ b/jadaptive-virtual-sftp-s3/src/main/resources/i18n/s3Folder.properties
@@ -20,6 +20,9 @@ accessKey.desc=The AWS access key for accessing this resource.
 secretKey.name=Secret Key
 secretKey.desc=The AWS secret key for accessing this resource.
 
+region.name=Region
+region.desc=The region that hosts the resources you want to access.
+
 bucket.name=Bucket
 bucket.desc=The S3 bucket you want to access resources on.
 
