Rename interface to SFTP interface. Rename product to Secure File Exchange.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/vsftpInterface.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/vsftpInterface.properties
@@ -1,5 +1,5 @@
-vsftpInterface.name=VSFTP Interface
-vsftpInterface.names=VSFTP Interfaces
+vsftpInterface.name=SFTP Interface
+vsftpInterface.names=SFTP Interfaces
 
 name.name=Interface Name
 name.desc=The name of this interface.
