Created Bucket tab

--- a/jadaptive-virtual-sftp-s3/src/main/resources/i18n/s3Folder.properties
+++ b/jadaptive-virtual-sftp-s3/src/main/resources/i18n/s3Folder.properties
@@ -8,6 +8,8 @@ s3Folder.created=S3 Folder Created
 s3Folder.updated=S3 Folder Updated
 s3Folder.deleted=S3 Folder Deleted
 
+bucketView.name=Bucket
+
 name.name=Name
 name.desc=The name to identify this mount when using this system.
 
