Missing i18n properties for upload forms.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/uploadForms.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/uploadForms.properties
@@ -27,6 +27,8 @@ notifyAssignedUsers.desc=Notify users assigned to the Virtual Folder resource wh
 otherEmails.name=Other Emails
 otherEmails.desc=Additional email addresses to notify when shared events occur.
 
+publicUploadStep2.stepName=Mount Storage
+
 help.text=Upload Forms allow you to share a web page with external users so they can upload files directly into your virtual file system.</p>\
 \
 <p>When you create an Upload Form, you will mount a folder in the virtual file system to receive the uploaded files. You can also set up email notifications to inform users when someone uploads files.</p>\
