Fix validation of mount creation. Must exist and be a directory.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -138,6 +138,9 @@ uploadPaths.desc=The files uploaded.
 
 upload.name=Upload
 
+domain.name=Domain
+domain.desc=The domain of the user.
+
 latestFiles.text=Latest Files
 no.incomingFiles=You have not received any files recently.
 
