Support for Dropbox oauth.

--- a/jadaptive-virtual-sftp-dropbox/src/main/resources/i18n/dropboxFolder.properties
+++ b/jadaptive-virtual-sftp-dropbox/src/main/resources/i18n/dropboxFolder.properties
@@ -1,7 +1,13 @@
 dropboxFolder.name=Dropbox Folder
 dropboxFolder.names=Dropbox Folders
+dropbox.name=Dropbox
+dropboxFolder=Dropbox Folder
+dropboxFolder.created=Dropbox Folder Created
+dropboxFolder.updated=Dropbox Folder Updated
+dropboxFolder.deleted=Dropbox Folder Deleted
 
-dropboxFolder=DropBox Folder
-dropboxFolder.created=DropBox Folder Created
-dropboxFolder.updated=DropBox Folder Updated
-dropboxFolder.deleted=DropBox Folder Deleted
+filePath.name=Path
+filePath.desc=The path within the Dropbox account to be used as the base folder of this mount.
+
+accessKey.name=Access Key
+accessKey.desc=An access key used for authentication. Please see documentation for how to obtain this.
