Fixed Dropbox oauth for cloud.

--- a/jadaptive-virtual-sftp-dropbox/src/main/resources/i18n/dropboxConfiguration.properties
+++ b/jadaptive-virtual-sftp-dropbox/src/main/resources/i18n/dropboxConfiguration.properties
@@ -1,5 +1,5 @@
 dropboxConfiguration.name=Dropbox
-dropbpxConfiguration.desc=Options for Dropbox file system access.
+dropboxConfiguration.desc=Options for Dropbox file system access.
 
 accessView.name=Authentication
 
