--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -227,3 +227,5 @@ copyDirect.desc=A direct link to the file for use in scripts and other automated
 
 pGPEncryption.remove=Remove PGP Encryption
 sharing.remove=Remove Sharing
+
+virtualFolder.saved={0} has been saved.
