--- a/jadaptive-virtual-sftp-dropbox/src/main/resources/i18n/dropboxConfiguration.properties
+++ b/jadaptive-virtual-sftp-dropbox/src/main/resources/i18n/dropboxConfiguration.properties
@@ -11,3 +11,6 @@ appKey.desc=The App Key value for your Dropbox application.
 
 appSecret.name=App Secret
 appSecret.desc=The App Secret value from your Dropbox application.
+
+oauthDomain.name=OAuth Domain
+oauthDomain.desc=The domain name reserved for Dropbox OAuth redirects.
