Make getDextinationUri public and use for connecting hostbased file systems, but use getRemotePath elsewhere that does not include the hostname. This fixes issues I was seeing on SFTP where the hostname ended up in the mount path.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -90,7 +90,7 @@ browseFiles.name=Browse Files
 
 create.public.upload=a public URL to receive files over the web
 
-configureFiles.name=Configure File System
+configureFiles.name=Virtual File System
 browseFiles.name=Browse Files
 
 
