Fixed wizard start page and changed how summary is rendered.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/vsftpInterface.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/vsftpInterface.properties
@@ -1,6 +1,12 @@
 vsftpInterface.name=SFTP Interface
 vsftpInterface.names=SFTP Interfaces
 
+configureInterface.stepName=Configure SFTP Server
+configureInterface.summary=Set the Network Interface and Port that the SFTP Server will listen on.
+
+review.interface.header=SFTP Server
+review.interface.desc=An interface for the SFTP Server will be created on:
+
 name.name=Interface Name
 name.desc=The name of this interface.
 
