--- a/jadaptive-virtual-sftp/src/main/resources/i18n/fileTasks.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/fileTasks.properties
@@ -36,3 +36,6 @@ deleteFolder.starting=Deleting Folder
 
 review.deleteFolder.header=Delete Folder
 review.deleteFolder.desc=A folder will be deleted at the following location:
+
+errorIfExists.name=Error if Exists
+errorIfExists.desc=Generate an error if the file already exists.
