--- a/jadaptive-virtual-sftp/src/main/resources/i18n/fileTasks.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/fileTasks.properties
@@ -39,3 +39,5 @@ review.deleteFolder.desc=A folder will be deleted at the following location:
 
 errorIfExists.name=Error if Exists
 errorIfExists.desc=Generate an error if the file already exists.
+
+transferingFile.text=Transferring {0}
