WIP on Automations

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/fileTasks.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/fileTasks.properties
@@ -7,6 +7,9 @@ location.desc=The source context of the target.
 filename.name=File Path
 filename.desc=The full path of the file, including its filename.
 
+paths.name=Paths
+paths.desc=The paths to use as source files.
+
 deleteContents.desc=Delete the folder and its contents. If you do not enable this option, the folder must be empty in order for it to be deleted.
 deleteContents.name=Delete Contents
 
@@ -52,3 +55,13 @@ blockSize.desc=The size in bytes to use for each block of data read from the sou
 
 moveFile.name=Move File
 pushFile.name=Push File
+
+optionsView.name=Options
+remoteView.name=Remote
+
+
+chunks.name=Chunks
+chunks.desc=The number of chunks to upload in parallel.
+
+remoteDirectory.name=Remote Directory
+remoteDirectory.desc=The path of the remote directory. If you do not supply a value the files will be uploaded to the users default directory.
