Refactored tasks and added all task fields to views.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/fileTasks.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/fileTasks.properties
@@ -54,10 +54,12 @@ blockSize.name=Block Size
 blockSize.desc=The size in bytes to use for each block of data read from the source and written to the target file.
 
 moveFile.name=Move File
-pushFile.name=Push File
+pushFile.name=SFTP Push
+putFile.name=SFTP Put
 
 optionsView.name=Options
-remoteView.name=Remote
+sourceView.name=Source Files
+targetView.name=Target
 
 
 chunks.name=Chunks
