New "Send To" feature.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -229,3 +229,17 @@ pGPEncryption.remove=Remove PGP Encryption
 sharing.remove=Remove Sharing
 
 virtualFolder.saved={0} has been saved.
+
+sendTo.name=Send To
+sendTo.instructions=Open a browser on the computer you want to send the file to and navigate to the URL below.
+
+waitingFor.text=Waiting for receiving user to connect...
+
+sendTo.info=You can use this service to easily send files from one computer to another. Files will be transferred over HTTPS and \
+will not be stored or saved on the server. Select the files you want to transfer and click Upload. Instructions will then follow \
+for how to access these on the receiving computer.
+
+receiveFrom.name=Receive File(s)
+receiveFrom.info=Your files will now be transfered. If there are multiple files they will be packaged in a zip file.
+transferingFiles.text=Transferring your files...
+transferComplete.text=The transfer has completed.
