Reset page after transfer.

--- a/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
+++ b/jadaptive-virtual-sftp/src/main/resources/i18n/virtualFolder.properties
@@ -242,4 +242,4 @@ for how to access these on the receiving computer.
 receiveFrom.name=Receive File(s)
 receiveFrom.info=Your files will now be transfered. If there are multiple files they will be packaged in a zip file.
 transferingFiles.text=Transferring your files...
-transferComplete.text=The transfer has completed.
+transferComplete.text=The transfer has completed. The form has been reset and ready to transfer more files.
